--- a/singlea.html
+++ b/singlea.html
@@ -27,8 +27,8 @@
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
@@ -129,6 +129,17 @@
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<section id="menu-down" class="text-center">
+		<div class="inicio">
+			<ul class="lista-principal">
+				<li><a href="#">PRODUCTOS</a></li>
+				<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+				<li><a href="#">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
+			</ul>
+		</div>	
 	</section>
 
 	<footer class="text-center">
