--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
@@ -108,10 +108,10 @@
 
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner">
-	    <div class="carousel-item active">
+	    <div class="carousel-item active" style="background-color: white;">
 	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-index.png" alt="First slide">
 	    </div>
-	    <div class="carousel-item">
+	    <div class="carousel-item" style="background-color: white;">
 	      <img class="d-block w-100 img-carrusel" src="assets/img/Capa-2.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
@@ -133,7 +133,7 @@
 
     <section id="third-part text-center">
     	<div class="row clips">
-    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding: 0 4% 0 4%;">
 				<div class="img-thumbnail">
 				   <div class="caption">
 				     <h3 class="text-center title-blue">NEW CLIP'S NEWS</h3>
@@ -142,7 +142,7 @@
 				   </div>
 				</div>
     		</div>
-    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding: 0 4% 0 4%;">
 				<div class="img-thumbnail">
 				   <div class="caption">
 				     <h3 class="text-center title-blue">NEW CLIP'S AGENDA</h3>
@@ -151,7 +151,7 @@
 				   </div>
 				</div>
     		</div>
-    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding: 0 4% 0 4%;">
 				<div class="img-thumbnail">
 				   <div class="caption">
 				     <h3 class="text-center title-blue">DOCUMENTATION</h3>
@@ -162,6 +162,17 @@
     		</div>
     	</div>
     </section>
+
+    <section id="menu-down" class="text-center">
+		<div class="inicio">
+			<ul class="lista-principal">
+				<li><a href="#">PRODUCTOS</a></li>
+				<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+				<li><a href="#">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
+			</ul>
+		</div>	
+	</section>
 
 	<footer class="text-center">
 		<h4>INNOVATIONS MEANS MOTION</h4>
