--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
@@ -39,11 +38,11 @@
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
-	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul style="margin-left: -10px;">
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
@@ -53,7 +52,7 @@
 
 	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
+			<li><a id="clavicula" href="#">CLAVICULA</a></li>
 			<li><a id="humero" href="#">HUMERO</a></li>
 			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
 			<li><a id="mano" href="singles.html">MANO</a></li>
@@ -75,7 +74,7 @@
 
 	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
 			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
 			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
 			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
@@ -83,7 +82,7 @@
 	</div>
 
 	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: 41%;">
 			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
@@ -98,7 +97,7 @@
 	</div>-->
 
 	<div id="lista-menu-8" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul style="margin-left: 674px;">
+		<ul style="margin-left: 36%;">
 			<li><a href="sports_tibia_activmotion.html">ACTIVMOTION</a></li>
 			<li><a href="lower_tibia_activmotion-ligamento.html">ACTIVMOTION LIGAMENTO</a></li>
 		</ul>
@@ -158,10 +157,9 @@
 
     <section id="menu-down" class="text-center">
 		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">PRODUCTOS</a></li>
-				<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
-				<li><a href="#">EMPRESA</a></li>
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
 				<li><a href="#">CONTACTO</a></li>
 			</ul>
 		</div>	
