--- a/upper_humerus_alians_elbow.html
+++ b/upper_humerus_alians_elbow.html
@@ -20,15 +20,14 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
@@ -39,14 +38,15 @@
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
-	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul style="margin-left: -10px;">
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
+			<!--<li><a href="singles.html">INITIAL S</a></li>-->
 		</ul>
 	</div>
 
@@ -74,7 +74,7 @@
 
 	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
 			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
 			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
 			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
@@ -82,7 +82,7 @@
 	</div>
 
 	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: 41%;">
 			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
@@ -94,47 +94,49 @@
 
 	<section id="info-singlea">
 		<div class="container">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
-				<h4 class="title-bold">ALIANS ELBOW</h4>
-				<p>Distal Humerus - Olecranon</p>
-				<br>
-				<h5 class="title-bold">INDICATIONS</h5>
-				<p>The implants of the Alians Elbow range are dedicated to the fixation of fractures and osteotomies of the distal humerus and proximal ulna in adults.</p>
-				<br>
-				<h5 class="title-bold">TECHNICAL FEATURES</h5>
-				<p>Precontoured implant including bendable sections</p>
-				<p>Dual System® 2 technology: polyaxialholes allowing +/- 10° screw angulation (20° cone) ensuring optimum flexibility to capture bone fragments and prevent screws impinging on each other Distal Humerus</p>
-				<br>
-				<p>Fixation with two plates: <br>
-					Perpendicular fixation: medial plate ans posterol-lateral plate with or without a backing device <br>
-					Pre-mounted lateral support tat can be removed in case of small size humerus or fractures of the capitellum </p>
-				<p>Fixation with one plate: <br>
-					Y plate <br>
-					Olecranon <br>
-					60mm (5mm increment)</p>
-				<p>Narrow, low-profile implant minimizing risks of skin necrois and irritation of soft-tissues <br>
-					Single screw diameter: 2.8mm <br>
-					2 epiphyseal hooks making fractures reduction easier and improving implant stability</p>
-				<br>
-				<h5 class="title-bold">IMPLANTS</h5>
-				<p>Distal Humerus</p>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
-				<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
-				<ul>
-					<li><a href="#">Alians Elbow Brochure</a></li>
-					<li><a href="#">Alians Elbow - Y plates brochure</a></li>
-					<li><a href="#">Alians Elbow distal humerus surgical technique</a></li>
-					<li><a href="#">Alians Elbow olcranon surgical technique</a></li>
-				</ul>
-				<br>
-				<br>
-				<p>4 types of plates: medial in 4 sizes (length 74 to 186mm), lateral in 5 sizes (length 67 to 207mm), posterol-lateral in 5 sizes (length 71 to 213 mm) and Y plates in 3 sizes (length 134 to 226mm). The lateral, posterol-lateral and Y plates are available in right and left versions
-				<br>
-				Diaphyseal fixation: Ø2.8mm locking and non-locking screws, length 10 to 40mm (2mm increment) and 40 to 60mm (5mm increment) Olecranon</p>
-				<br>
-				<p>2 types of plates: Narrow plate (single size: 54mm) and standard plates (length 102 to 182mm)<br>
-				Single fixation: Ø2.8mm locking and non-locking screws, length 10 to 40mm (2mm increment) and 40 t</p>
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-a">
+					<h4 class="title-bold">ALIANS ELBOW</h4>
+					<p>Distal Humerus - Olecranon</p>
+					<br>
+					<h5 class="title-bold">INDICATIONS</h5>
+					<p>The implants of the Alians Elbow range are dedicated to the fixation of fractures and osteotomies of the distal humerus and proximal ulna in adults.</p>
+					<br>
+					<h5 class="title-bold">TECHNICAL FEATURES</h5>
+					<p>Precontoured implant including bendable sections</p>
+					<p>Dual System® 2 technology: polyaxialholes allowing +/- 10° screw angulation (20° cone) ensuring optimum flexibility to capture bone fragments and prevent screws impinging on each other Distal Humerus</p>
+					<br>
+					<p>Fixation with two plates: <br>
+						Perpendicular fixation: medial plate ans posterol-lateral plate with or without a backing device <br>
+						Pre-mounted lateral support tat can be removed in case of small size humerus or fractures of the capitellum </p>
+					<p>Fixation with one plate: <br>
+						Y plate <br>
+						Olecranon <br>
+						60mm (5mm increment)</p>
+					<p>Narrow, low-profile implant minimizing risks of skin necrois and irritation of soft-tissues <br>
+						Single screw diameter: 2.8mm <br>
+						2 epiphyseal hooks making fractures reduction easier and improving implant stability</p>
+					<br>
+					<h5 class="title-bold">IMPLANTS</h5>
+					<p>Distal Humerus</p>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
+					<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
+					<ul>
+						<li><a href="assets/pdf/brochureen_alianselbow_ed1bd__005500700_1221_27082015.pdf" hreflang="es" class="LinkFile" target="_blank">Alians Elbow Brochure</a></li>
+						<li><a href="assets/pdf/brochureen_alianselbow_ed1bd__005500700_1221_27082015.pdf" hreflang="es" class="LinkFile" target="_blank">Alians Elbow - Y plates brochure</a></li>
+						<li><a href="assets/pdf/newclipen_elbow_toen__084399600_1736_30052017.pdf" hreflang="es" class="LinkFile" target="_blank">Alians Elbow distal humerus surgical technique</a></li>
+						<li><a href="assets/pdf/to_en_alians_olecrane_ed1__031536500_1711_30052017.pdf" hreflang="es" class="LinkFile" target="_blank">Alians Elbow olcranon surgical technique</a></li>
+					</ul>
+					<br>
+					<br>
+					<p>4 types of plates: medial in 4 sizes (length 74 to 186mm), lateral in 5 sizes (length 67 to 207mm), posterol-lateral in 5 sizes (length 71 to 213 mm) and Y plates in 3 sizes (length 134 to 226mm). The lateral, posterol-lateral and Y plates are available in right and left versions
+					<br>
+					Diaphyseal fixation: Ø2.8mm locking and non-locking screws, length 10 to 40mm (2mm increment) and 40 to 60mm (5mm increment) Olecranon</p>
+					<br>
+					<p>2 types of plates: Narrow plate (single size: 54mm) and standard plates (length 102 to 182mm)<br>
+					Single fixation: Ø2.8mm locking and non-locking screws, length 10 to 40mm (2mm increment) and 40 t</p>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -142,6 +144,7 @@
 	<section id="surgical">
 		<div class="container text-center">
 			<h5 class="title-bold">SURGICAL TECHNIQUES: FINAL RESULTS</h5>
+			<br>
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-3-col-xs-12">
 					<h6>PARALLEL FIXATION</h6>
@@ -160,8 +163,10 @@
 					<img src="assets/img/img_upperhumelb4.jpg">
 				</div>
 			</div>
+			<br>
+			<h5 class="title-bold">REFERENCES</h5>
+			<br>
 			<div class="row">
-				<h5 class="title-bold">REFERENCES</h5>
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					<h6>Distal Humerus Medial plates</h6>
 					<img src="assets/img/img_upperhumelb5.jpg">
@@ -194,23 +199,18 @@
 
 	<section id="menu-down" class="text-center">
 		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">COMPANY</a></li>
-				<li><a href="#">NEWS</a></li>
-				<li><a href="#">AGENDA</a></li>
-				<li><a href="#">CERTIFICATIONS</a></li>
-				<li><a href="#">INITIAL R</a></li>
-				<li><a href="#">INITIAL A</a></li>
-				<li><a href="#">BROCHURES</a></li>
-				<li><a href="#">VIDEOS</a></li>
-				<li><a href="#">LEGAL NOTICES</a></li>
-				<li><a href="#">CONTACT</a></li>
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
 			</ul>
 		</div>	
 	</section>
 
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
