--- a/compania.html
+++ b/compania.html
@@ -20,27 +20,25 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="compania.html">COMPAÑÍA</a></li>
-						<li><a href="#">NOTICIAS</a></li>
-						<li><a href="#">AGENDA</a></li>
-						<li><a href="#">LINKS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
+						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
 	</section>
 
 	<nav class="nav">
-	  <a class="nav-link" href="#" style="background-color: #407d9e;">PRODUCTOS</a>
-	  <a class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
-	  <a class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
-	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
-	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <a class="nav-link" href="index.html">PRODUCTOS</a>
+	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
+	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
+	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<!--<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -69,8 +67,20 @@
 		</div>
     </div>
 
+	<section id="menu-down" class="text-center">
+		<div class="inicio">
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
+			</ul>
+		</div>	
+	</section>
+
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
@@ -81,5 +91,6 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
