--- a/singlea.html
+++ b/singlea.html
@@ -20,8 +20,7 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
@@ -39,11 +38,11 @@
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
-	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul style="margin-left: -10px;">
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
@@ -75,7 +74,7 @@
 
 	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
 			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
 			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
 			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
@@ -83,14 +82,14 @@
 	</div>
 
 	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: 41%;">
 			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
 
 
 	<section id="header-inicio">
-		<div class="container-fluid">
+		<div class="container-fluid text-center">
 			<img class="banner-1" src="assets/img/Capa-2.jpg" alt="">
 		</div>
 	</section>
@@ -133,17 +132,18 @@
 
 	<section id="menu-down" class="text-center">
 		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">PRODUCTOS</a></li>
-				<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
-				<li><a href="#">EMPRESA</a></li>
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
 				<li><a href="#">CONTACTO</a></li>
 			</ul>
 		</div>	
 	</section>
 
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
