--- a/singler.html
+++ b/singler.html
@@ -20,15 +20,14 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
@@ -39,11 +38,11 @@
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
-	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul style="margin-left: -10px;">
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
@@ -110,7 +109,6 @@
 					<p>Initial R kits are available with the following implants:</p>
 					<p>Plates:</p>
 					<p>6 plates, available in right and left version:</p>
-					<br>
 					<p>Narrow head plates: Size 1 (length: 41 mm, width: 19,5 mm), Size 2 (length: 52mm, width: 20,7 mm) </p>
 					<p>Standard head plates: Size 1 (length: 41 mm, width: 23,7 mm), Size 2 (length: 52mm, width: 23,7 mm). Size 3 (length: 90 mm, width 23,7 mm)</p>
 					<p>Wide head plate: Size 1 (length: 60 mm, width: 27,6 mm)</p>
@@ -121,7 +119,6 @@
 					<p>Palmar plate running alongside the watershed line, <br> Optimal design reducing the risks of soft tissue irritation thanks to the rounded distal edge of the plates</p>
 					<p>Dualtec System 2 technology: polyaxical holes allowing +/- 10 angulation (20° cone).</p>
 					<p>Fixation: 2.8 mm</p>
-					<br>
 					<p>Locking screws</p>
 					<p>Corticol screws</p>
 					<p>(Additional sterile screws can be ordered separated in Supplemental Sterile Screw Caddy)</p>
@@ -130,8 +127,20 @@
 		</div>
 	</section>
 
+	<section id="menu-down" class="text-center">
+		<div class="inicio">
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
+			</ul>
+		</div>	
+	</section>
+
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
