--- a/upper_alians_clavicle.html
+++ b/upper_alians_clavicle.html
@@ -20,48 +20,70 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
 	</section>
 
 	<nav class="nav">
+	  <a class="nav-link" href="index.html">PRODUCTOS</a>
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
-	  <a class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>
-	  <a class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a href="singles.html">INITIAL S</a></li>
+			<!--<li><a href="singles.html">INITIAL S</a></li>-->
 		</ul>
 	</div>
 
 	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
 			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
-			<li><a href="singlec.html">HUMERO</a></li>
-			<li><a href="singler.html">RADIO Y ULNA</a></li>
-			<li><a href="singles.html">MANO</a></li>
+			<li><a id="humero" href="#">HUMERO</a></li>
+			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
+			<li><a id="mano" href="singles.html">MANO</a></li>
 		</ul>
 	</div>
 
 	<div id="lista-menu-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="#">ALIANS CLAVICULA</a></li>
+			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">HUMERO PROXIMAL</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">CODO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
+			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 41%;">
+			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
 	
@@ -96,14 +118,15 @@
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
 					<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 					<ul>
-						<li><a href="assets/pdf/brochureen_aliansclav_ed13_bd_2__079555100_1814_13032017.pdf" download="Alians_clavicle_brochure">Alians clavicle brochure</a></li>
-						<li><a href="assets/pdf/toen_aliansclav_ed13_hd__068425600_1700_13032017.pdf" download="Alians_clavicle_surgical_technique">Alians clavicle surgical technique</a></li>
+						<li><a href="assets/pdf/brochureen_aliansclav_ed13_bd_2__079555100_1814_13032017.pdf">Alians clavicle brochure</a></li>
+						<li><a href="assets/pdf/toen_aliansclav_ed13_hd__068425600_1700_13032017.pdf">Alians clavicle surgical technique</a></li>
 					</ul>
 					<br>
 					<h5 class="title-bold">VIDEOS</h5>
 					<ul>
-						<li><a href="#">Alians clavicle medial plate</a></li>
-						<li><a href="#">Alians clavicle lateral plate</a></li>
+						<iframe width="500" height="280" src="https://www.youtube.com/embed/TnZi5IP-Dn4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						<br>
+						<iframe width="500" height="280" src="https://www.youtube.com/embed/FEzfxgcP-2U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</ul>
 					<br>
 					
@@ -148,8 +171,20 @@
 		</div>
 	</section>
 
+	<section id="menu-down" class="text-center">
+		<div class="inicio">
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
+			</ul>
+		</div>	
+	</section>
+
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
