--- a/upper_hand_handmotion.html
+++ b/upper_hand_handmotion.html
@@ -20,15 +20,14 @@
 			<div class="contenido_header">
 				<div class="inicio">
 					<ul class="lista-principal">
-						<li><a href="#">PRODUCTOS</a></li>
-						<li><a href="#">PRODUCTOS ESTERILIZADOS</a></li>
+						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
 						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
-					<p><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</p>
-					<p><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</p>
+					<span><a href="tel:+56999335506" style="color: white;"><i class="fa fa-phone" aria-hidden="true"></i> +56 9 993 35 506</a></span>
+					<p><a href="mailto:mramirez@innova-lr.cl" style="color: white;"><i class="fa fa-envelope" aria-hidden="true"></i> mramirez@innova-lr.cl</a></p>
 				</div>	
 			</div>
 		</div>
@@ -39,7 +38,7 @@
 	  <a id="implantes" class="nav-link" href="#">IMPLANTES ESTERILIZADOS</a>
 	  <a id="superior" class="nav-link" href="#">EXTREMIDAD SUPERIOR Y MANO</a>
 	  <!--<a id="inferior" class="nav-link" href="#">EXTREMIDAD INFERIOR Y PIE</a>-->
-	  <a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>
+	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
 	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
@@ -75,7 +74,7 @@
 
 	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
 		<ul>
-			<li><a href="uppper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
 			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
 			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
 			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
@@ -83,7 +82,7 @@
 	</div>
 
 	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
-		<ul>
+		<ul style="margin-left: 41%;">
 			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
 		</ul>
 	</div>
@@ -132,7 +131,7 @@
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
 					<h5 class="title-bold">DOCUMENTS TO DOWNLOAD</h5>
 					<ul>
-						<li><a href="#">Brochure</a></li>
+						<li><a href="assets/pdf/brochure_ift_en_ed2_v2__064093700_1743_06022014.pdf" title="Brochure" hreflang="en" class="LinkFile" target="_blank">Brochure</a></li>
 					</ul>
 				</div>
 			</div>
@@ -141,23 +140,18 @@
 
 	<section id="menu-down" class="text-center">
 		<div class="inicio">
-			<ul class="lista-principal">
-				<li><a href="#">COMPANY</a></li>
-				<li><a href="#">NEWS</a></li>
-				<li><a href="#">AGENDA</a></li>
-				<li><a href="#">CERTIFICATIONS</a></li>
-				<li><a href="#">INITIAL R</a></li>
-				<li><a href="#">INITIAL A</a></li>
-				<li><a href="#">BROCHURES</a></li>
-				<li><a href="#">VIDEOS</a></li>
-				<li><a href="#">LEGAL NOTICES</a></li>
-				<li><a href="#">CONTACT</a></li>
+			<ul class="lista-principal" style="padding: 0;">
+				<li><a href="index.html">PRODUCTOS</a></li>
+				<li><a href="compania.html">EMPRESA</a></li>
+				<li><a href="#">CONTACTO</a></li>
 			</ul>
 		</div>	
 	</section>
 
 	<footer class="text-center">
+		<br>
 		<h4>INNOVATIONS MEANS MOTION</h4>
+		<br>
 		<p>Administración: Avenida Apoquindo 6410 oficina 605 Las Condes</p>
 		<p>Comercial Avda. Libertador Bernardo O'Higgins 4050 Of. 1005</p>
 	</footer>
