--- a/singler.html
+++ b/singler.html
@@ -88,7 +88,7 @@
 	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid">
+		<div class="container-fluid text-center">
 			<img class="banner-1" src="assets/img/banner-singler.jpg" alt="">
 		</div>
 	</section>
