agregando pagina de contacto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<ul class="lista-principal">
 						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
-						<li><a href="#">CONTACTO</a></li>
+						<li><a href="contacto.html">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
@@ -160,7 +160,7 @@
 			<ul class="lista-principal" style="padding: 0;">
 				<li><a href="index.html">PRODUCTOS</a></li>
 				<li><a href="compania.html">EMPRESA</a></li>
-				<li><a href="#">CONTACTO</a></li>
+				<li><a href="contacto.html">CONTACTO</a></li>
 			</ul>
 		</div>	
 	</section>
