--- a/singler.html
+++ b/singler.html
@@ -88,8 +88,8 @@
 	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid text-center">
-			<img class="banner-1" src="assets/img/banner-singler.jpg" alt="">
+		<div class="container-fluid text-center" style="padding: 0;">
+			<img class="banner-1 w-100" src="assets/img/banners/singer.jpg" alt="">
 		</div>
 	</section>
 
