--- a/upper_radius_alians_specific.html
+++ b/upper_radius_alians_specific.html
@@ -104,7 +104,8 @@
 	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-alians_fragment_specific.jpg)">
+		<div class="container-fluid text-center" style="padding: 0;">
+			<img class="banner-1 w-100" src="assets/img/banners/UPPER_RADIUS_ALIANS_specific.jpg" alt="">
 		</div>
 	</section>
 
