--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
 
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner">
-	    <div class="carousel-item active" style="background-color: white;">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-index.png" alt="First slide">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/singeuse.jpg" alt="First slide">
 	    </div>
 	    <div class="carousel-item" style="background-color: white;">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/Capa-2.jpg" alt="Second slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/singleuseA.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-index3_02.png" alt="Third slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/" alt="Third slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/banner-aliansdistalradius.jpg" alt="Fourth slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/UPPER_RADIUS_ALIANS_radius.jpg" alt="Fourth slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
