--- a/singlea.html
+++ b/singlea.html
@@ -89,8 +89,8 @@
 
 
 	<section id="header-inicio">
-		<div class="container-fluid text-center">
-			<img class="banner-1" src="assets/img/Capa-2.jpg" alt="">
+		<div class="container-fluid text-center" style="padding: 0;">
+			<img class="banner-1 w-100" src="assets/img/banners/singleuseA.jpg" alt="">
 		</div>
 	</section>
 
