--- a/upper_humerus_alians.html
+++ b/upper_humerus_alians.html
@@ -88,7 +88,8 @@
 	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-upper_humerus_alians.png);">
+		<div class="container-fluid text-center" style="padding: 0;">
+			<img class="banner-1 w-100" src="assets/img/banners/UPPER_HUMERUS_ALIANS.jpg" alt="">
 		</div>
 	</section>
 
