--- a/upper_humerus_alians_elbow.html
+++ b/upper_humerus_alians_elbow.html
@@ -88,7 +88,8 @@
 	</div>
 	
 	<section id="header-inicio">
-		<div class="container-fluid container-banner" style="background-image: url(../innova/assets/img/banner-upperhumeruselbows.jpg)">
+		<div class="container-fluid text-center" style="padding: 0;">
+			<img class="banner-1 w-100" src="assets/img/banners/UPPER_RADIUS_ALIANS_elbow.jpg" alt="">
 		</div>
 	</section>
 
