banners cambiados index

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/singleuseA.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/" alt="Third slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/singeuse3.jpg" alt="Third slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/UPPER_RADIUS_ALIANS_radius.jpg" alt="Fourth slide">
+	      <img class="d-block w-100 img-carrusel" src="assets/img/banners/singeuse4.jpg" alt="Fourth slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
