subiendo cambios contacto

--- a/contacto.html
+++ b/contacto.html
@@ -52,6 +52,22 @@
 
 	<div class="container container-2">
 		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<h5>HORARIOS DE ATENCIÓN:<br>
+				Lunes a viernes: 9AM - 5PM</h5>
+				<br>
+				<h5>TELÉFONO DE CONTACTO: <br><a href="tel:232459026">2 324 590 26</a></h5>
+				<br>
+				<h5>SERVICIO INMEDIATO (24/7): <br><a href="tel:+56999335506">+56 9 993 35 506</a></h5>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<h5>DIRECCIÓN COMERCIAL: <br>
+				Av. Libertador Bernardo O'Higgins 4050</h5>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3328.8020703531765!2d-70.69414858503181!3d-33.454462880772795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c4f518475c3f%3A0x411ffb827f4cdc3e!2sAv+Libertador+Bernardo+O&#39;Higgins+4050%2C+Santiago%2C+Estaci%C3%B3n+Central%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1524497987336" width="490" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+		</div>
+		<br>
+		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<div class="img-thumbnail thumbnail-2">
 					<div class="caption">
