--- a/singler.html
+++ b/singler.html
@@ -114,7 +114,7 @@
 					<p>Wide head plate: Size 1 (length: 60 mm, width: 27,6 mm)</p>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 container-b">
-					<img src="assets/img/Capa-3.png">
+					<img src="assets/img/initialrkit.png">
 					<p>Technical features:</p>
 					<p>Palmar plate running alongside the watershed line, <br> Optimal design reducing the risks of soft tissue irritation thanks to the rounded distal edge of the plates</p>
 					<p>Dualtec System 2 technology: polyaxical holes allowing +/- 10 angulation (20° cone).</p>
