--- a/compania.html
+++ b/compania.html
@@ -22,7 +22,7 @@
 					<ul class="lista-principal">
 						<li><a href="index.html">PRODUCTOS</a></li>
 						<li><a href="compania.html">EMPRESA</a></li>
-						<li><a href="#">CONTACTO</a></li>
+						<li><a href="contacto.html">CONTACTO</a></li>
 					</ul>
 				</div>	
 				<div class="datos-contacto">
@@ -41,14 +41,51 @@
 	  <!--<a id="medicina" class="nav-link" href="#">MEDICINA DEPORTIVA</a>-->
 	</nav>
 
-	<!--<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<ul>
+	<div id="lista-menu" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 2%;">
 			<li><a href="singlea.html">INITIAL A</a></li>
 			<li><a href="singlec.html">INITIAL C</a></li>
 			<li><a href="singler.html">INITIAL R</a></li>
-			<li><a href="singles.html">INITIAL S</a></li>
+			<!--<li><a href="singles.html">INITIAL S</a></li>-->
 		</ul>
-	</div>-->
+	</div>
+
+	<div id="lista-menu-2" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a id="clavicula" href="upper_alians_clavicle.html">CLAVICULA</a></li>
+			<li><a id="humero" href="#">HUMERO</a></li>
+			<li><a id="radio" href="singler.html">RADIO Y CUBITO</a></li>
+			<li><a id="mano" href="singles.html">MANO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-3" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_alians_clavicle.html">ALIANS CLAVICULA</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-4" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_humerus_alians.html">HUMERO PROXIMAL</a></li>
+			<li><a href="upper_humerus_alians_elbow.html">CODO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-5" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul>
+			<li><a href="upper_radius_alians_ulna.html">ACORTAMIENTO CUBITAL</a></li>
+			<li><a href="upper_radius_alians_radius.html">RADIO DISTAL</a></li>
+			<li><a href="upper_radius_alians_midshaft.html">ANTEBRAZO</a></li>
+			<li><a href="upper_radius_alians_specific.html">FRAGMENTO ESPECÍFICO</a></li>
+		</ul>
+	</div>
+
+	<div id="lista-menu-6" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display: none;">
+		<ul style="margin-left: 41%;">
+			<li><a href="upper_hand_handmotion.html">TORNILLOS CANULADOS</a></li>
+		</ul>
+	</div>
 
 	<div class="container container-2">
 		<div class="row">
@@ -56,11 +93,11 @@
 				<div class="img-thumbnail thumbnail-2">
 					<div class="caption">
 						<h3 class="title-blue">EMPRESA</h3>
-						<p>Innova Solutions SPA. Emprendimiento en Chile con el propósito de proveer soluciones de implantes médicos de última generación. 
+						<p>Innova Solutions SPA. Emprendimiento en Chile con el propósito de proveer soluciones de implantes médicos innovadores de última generación. 
 						<br>
 						Contamos con productos innovadores que facilitan el trabajo médica y de este modo transmitir esta tecnología de punta a cada uno de sus pacientes.<br>
-						Además de contar con los sistemas convencionales contamos con una línea de implantes esterilizados: "listos cuando tú lo estés". Nuestros clientes pueden evitar todos los problemas que el proceso de esterilización trae consifo a precios sumamente convenientes, eliminando potenciales problemas, ahorrando tiempo y dinero. <br>
-						Somos representantes en Chile de NEWCLIP TECHNICS, compañía francesa productora de implantes de última generación y de continuo desarrollo al servicio médico. Newclip Technics está presente en más de 25 países incluidos Europa, USA y Australia. Con facultativos de renombre mundial que abalan nuestros productos, contamos con certificaciones FDA y de la Unión Europea, disponibles en Chile.</p>
+						Además de contar con los sistemas convencionales contamos con una línea de implantes esterilizados: "listos cuando tú lo estés". Nuestros clientes pueden evitar todos los problemas que el proceso de esterilización trae consigo a precios sumamente convenientes, eliminando potenciales problemas, ahorrando tiempo y dinero. <br>
+						Somos representantes en Chile de NEWCLIP TECHNICS, compañía francesa productora de implantes de última generación y de continuo desarrollo al servicio médico. Newclip Technics está presente en más de 25 países incluidos Europa, USA y Australia. Con facultativos de renombre mundial que abalan nuestros productos, contamos con certificaciones FDA y de la Unión Europea.</p>
 					</div>
 				</div>
 		    </div>
@@ -72,7 +109,7 @@
 			<ul class="lista-principal" style="padding: 0;">
 				<li><a href="index.html">PRODUCTOS</a></li>
 				<li><a href="compania.html">EMPRESA</a></li>
-				<li><a href="#">CONTACTO</a></li>
+				<li><a href="contacto.html">CONTACTO</a></li>
 			</ul>
 		</div>	
 	</section>
